<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_patient"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/new_patient" />
        <item
            android:id="@+id/load_patient"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/load_patient"/>
        <item
            android:id="@+id/configuration"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/configuration" />

        <item
            android:id="@+id/test"
            android:icon="@drawable/ic_title_black_24dp"
            android:title="@string/test"  />
    </group>
</menu>
