<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/new_patient">

    <fragment
        android:id="@+id/new_patient"
        android:name="com.lovish.spirocare.ui.home.HomeFragment"
        android:label="@string/new_patient"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.lovish.spirocare.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/new_patient" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/load_patient"
        android:name="com.lovish.spirocare.ui.gallery.GalleryFragment"
        android:label="@string/load_patient"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/configuration"
        android:name="com.lovish.spirocare.ui.slideshow.SlidshowFragment"
        android:label="@string/configuration" />
    <fragment
        android:id="@+id/test"
        android:name="com.lovish.spirocare.ui.test.TestFragment"
        android:label="@string/test"
        tools:layout="@layout/test" />
</navigation>